--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "dotenv": "^16.5.0",
     "lexical": "^0.31.2",
     "ngx-markdown-editor": "^5.3.4",
     "rxjs": "~7.8.0",
