--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=notesio-app 
-server.port=8080
+spring.data.mongodb.database=NotesioCluster
+ spring.data.mongodb.uri= ${DB_CONNECTION}
