--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "dotenv": "^16.5.0",
     "lexical": "^0.31.2",
+    "ngx-editor": "^19.0.0-beta.1",
     "ngx-markdown-editor": "^5.3.4",
+    "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
